--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -1,24 +1,17 @@
-body
-{
+body {
     margin: 0;
     padding: 0;
-    color: #cdcdcd;
     font-family: "Avenir Next", "Avenir", sans-serif;
     overflow-x: hidden;
 }
 
 a  {
     text-decoration: none;
-    color: #232323;
+    color: #385cff;
     transition: color 0.3s ease;
 }
-/*
-a:hover  {
-    color: tomato;
-}
-*/
-#menuToggle
-{
+
+#menuToggle {
     display: block;
     position: absolute;
     top: 10px;
@@ -28,109 +21,85 @@ a:hover  {
     user-select: none;
 }
 
-#menuToggle a
-{
+#menuToggle a {
     text-decoration: none;
     color: #232323;
     transition: color 0.3s ease;
 }
 
-#menuToggle a:hover
-{
+#menuToggle a:hover {
     color: #FFFFFF;
     background-color: #385cff;
 }
-#menuToggle input
-{
+
+#menuToggle input {
     display: block;
     width: 40px;
     height: 32px;
     position: absolute;
     top: -7px;
     left: -5px;
-
     cursor: pointer;
-
     opacity: 0; /* hide this */
     z-index: 2; /* and place it over the hamburger */
-
     -webkit-touch-callout: none;
 }
 
-#menuToggle span
-{
-    /*
-    display: block;
-    */
-
+#menuToggle span {
     display: flex;
     width: 33px;
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-
     background: #ebd000;
     border-radius: 3px;
-
     z-index: 1;
-
     transform-origin: 4px 0px;
-
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
     background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
     opacity 0.55s ease;
-
 }
-#menuToggle span:first-child
-{
+
+#menuToggle span:first-child {
     transform-origin: 0% 0%;
 }
-#menuToggle span:nth-last-child(2)
-{
+
+#menuToggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
 }
-#menuToggle input:checked ~ span
-{
+
+#menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #385cff;
 }
 
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
+#menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
+#menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
-#menu
-{
 
+#menu {
     display: flex;
-
     /*
   padding: 10vh 0 0 0;
    */
-
     position: absolute;
     width: 350px;
     margin: -100px 0 0 0;
     padding: 125px 0 0 0;
-
     right: -100px;
-
     background: #ebd000;
     border: solid 2px #FFFFFF;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     /* to stop flickering of text in safari */
-
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
-
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
@@ -138,8 +107,9 @@ a:hover  {
     display: flex;
     align-items: center;
 }
-#menu li
-{
+
+#menu li {
+    color: #385cff;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -151,11 +121,11 @@ a:hover  {
     font-weight: bold;
 }
 
-#menuToggle input:checked ~ ul
-{
+#menuToggle input:checked ~ ul {
     transform: none;
     opacity: 1;
 }
+
 @media screen and (max-width: 768px) {
     #menu {
         transform: none;
