--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
             </a>
             <ul>
                 <li><a><img src="{{ asset('icon/loupe.png') }}" alt="loupe" class=""></a></li>
-                <li><a>{% block search %}<img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">{% endblock search %}</a></li>
+                <a><li><a>{% block search %}<img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">{% endblock search %}</li></a>
                 <li><a><img src="{{ asset('icon/login.png') }}" alt="login" class=""></a></li>
                 <li>
                     <div id="menuToggle">
