--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -9,7 +9,9 @@
 {% block search %}
 
     <form>
+        <img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">
         <input type="text" placeholder="A red placeholder text..">
+        <img src="{{ asset('icon/loupe.png') }}" alt="loupe" class="">
     </form>
 
     <!--
