--- a/public/css/details.css
+++ b/public/css/details.css
@@ -3,8 +3,8 @@
     padding: 0;
     text-align: center;
     font-size: 1.3rem;
+    color: #CDCDCD;
     font-family: Arial, Helvetica, sans-serif;
-    color: blue;
     box-sizing: border-box;
     list-style-type: none;
 }
@@ -35,6 +35,10 @@
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/bevietnampro/v8/QdVNSTAyLFyeg_IDWvOJmVES_HRUNXgSYJIheh4.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+.border {
+    border-color: blueviolet;
 }
 
 .relative {
@@ -189,11 +193,22 @@ footer {
     padding: 20px; /* Some padding */
 }
 
-.card-text h2, h3 {
+.card-text h1{
+    color: #eb5d00; /* orange text */
+    display: inline-block;
+    padding-bottom: 1rem;
+}
+.card-text h2, h3, p{
+    color: #385cff;
     display: inline-block;
     padding-bottom: 1rem;
 }
 
+.content p{
+    color: #385cff;
+    display: inline-block;
+    padding-bottom: 1rem;
+}
 .date {
     padding-top: 2rem;
 }
