--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,4 +1,10 @@
-            </main>
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+
+{% endblock stylesheets %}
+
         <footer class="footer">
            <nav>
                <ul>
