--- a/public/css/hbg.css
+++ b/public/css/hbg.css
@@ -1,158 +1,151 @@
-body  {
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: red;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: red;
+}
+
+body {
   margin: 0;
   padding: 0;
-  /* make it look decent enough */
-  /*background: #232323;*/
-  color: #cdcdcd;
   font-family: "Avenir Next", "Avenir", sans-serif;
-  overflow-x: hidden; /* needed because hiding the menu on the right side  */
+  overflow-x: hidden;
 }
 
 a  {
+  text-decoration: none;
+  color: #385cff;
+  transition: color 0.3s ease;
+}
+
+#searchToggle {
+  border: 2px solid #3e8e41;
+  display: block;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+
+#searchToggle a {
   text-decoration: none;
   color: #232323;
   transition: color 0.3s ease;
 }
 
-a:hover  {
-  color: tomato;
+#searchToggle a:hover {
+  color: #FFFFFF;
+  background-color: #385cff;
 }
 
-#menuToggle
-{
-  display: block;
-  position: absolute;
-  top: 50px;
-  right: 50px;
-
-  z-index: 1;
-
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle input
-{
+#searchToggle input {
   display: block;
   width: 40px;
   height: 32px;
   position: absolute;
   top: -7px;
   left: -5px;
-
   cursor: pointer;
-
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-
   -webkit-touch-callout: none;
 }
 
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
+#searchToggle span {
+  display: flex;
   width: 33px;
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-
   background: #ebd000;
   border-radius: 3px;
-
   z-index: 1;
-
   transform-origin: 4px 0px;
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
   background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
   opacity 0.55s ease;
 }
 
-#menuToggle span:first-child
-{
+#searchToggle span:first-child {
   transform-origin: 0% 0%;
 }
 
-#menuToggle span:nth-last-child(2)
-{
+#searchToggle span:nth-last-child(2) {
   transform-origin: 0% 100%;
 }
 
-/*
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
+#searchToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
+  background: #385cff;
 }
 
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
+#SearchToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  opacity: 1;
+#SearchToggle input:checked ~ span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
-/*
- * Make this absolute positioned
- * at the top left of the screen
+#Search {
+  display: flex;
+  /*
+padding: 10vh 0 0 0;
  */
-#menu
-{
   position: absolute;
-  width: 300px;
-  margin: -100px 0 0 0;
-  padding: 50px;
-  padding-top: 125px;
-  right: -100px;
-
-  background: #ededed;
+  width: 350px;
+  margin: -300px 0 0 0;
+  padding: 125px 0 0 0;
+  right: -300px;
+  background: #ebd000;
+  border: solid 2px #FFFFFF;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
+#search ul {
+  display: flex;
+  align-items: center;
 }
 
-/*
- * And let's fade it in from the left
- */
-#menuToggle input:checked ~ ul
-{
+#search li {
+  color: #385cff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  border: solid 2px #FFFFFF;
+  padding: 10px 0 0 0;
+  line-height: 10px ;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+#searchToggle input:checked ~ ul {
   transform: none;
   opacity: 1;
 }
 
 @media screen and (max-width: 768px) {
-  #menu {
+  #search {
     transform: none;
     opacity: 0;
+    font-size: 1.2rem;
 
     transition: opacity 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
   }
