--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,12 +1,152 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: red;
-  opacity: 1; /* Firefox */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Avenir Next", "Avenir", sans-serif;
+  overflow-x: hidden;
+}
+a  {
+  text-decoration: none;
+  color: #385cff;
+  transition: color 0.3s ease;
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: red;
+#searchToogle {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 6%;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
-  color: red;
+#searchToogle a {
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+#searchToogle a:hover {
+  color: #FFFFFF;
+  background-color: #385cff;
+}
+
+#searchToogle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+
+#searchToogle span {
+  display: flex;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+  opacity 0.55s ease;
+}
+
+#searchToogle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#searchToogle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#searchToogle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #385cff;
+}
+
+#searchToogle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#searchToogle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+
+#search{
+  display: flex;
+  position: absolute;
+  width: 400px;
+  margin: 0 0 0 0;
+  padding: -25% 0 20% 0;
+  right: -400%;
+  background: #ebd000;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+}
+
+#search ul {
+  display: flex;
+  align-items: center;
+}
+
+
+#search li {
+  color: #FFFFFF;
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+  border-top: solid 2px #FFFFFF;
+  line-height: 10px ;
+  font-size: 22px;
+  font-weight: bold;
+
+}
+
+#searchToogle input:checked ~ ul {
+  transform: none;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  #search {
+    transform: none;
+    opacity: 0;
+    font-size: 1.2rem;
+
+    transition: opacity 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+}
+
+.search-detail {
+  text-align: start;
+  align-items: center;
+}
+
+.book-image img {
+  object-fit: contain;
+  width: 80%;
+  max-height: 50vh;
+  padding: 6rem 0 2rem 0;
+}
+
+.card-text h2, h3 {
+  padding-bottom: 1rem;
+}
+
+.date {
+  padding-top: 2rem;
 }
